--- a/Assignments/HTML CSS/(Module-2)-CSS and CSS 3/index.html
+++ b/Assignments/HTML CSS/(Module-2)-CSS and CSS 3/index.html
@@ -1,19 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        h1{
-            width: 50%;
-            height: 20px;
-            margin: auto;
-            border: 1px solid black;
-        }
-    </style>
+    <title>Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1></h1>
+    <div class="container">
+        <div class="grid">
+            <div class="first">
+                <p>Thumbnail</p>
+            </div>
+            <p class="second white">This is a wider card with supporting text below as a natural lead in to additional content. This content
+                is a littel bit longer.</p>
+            <div class="third white">
+                <div class="btn">
+                    <button>View</button>
+                    <button>Edit</button>
+                </div>
+                <p>2 min ago</p>
+            </div>
+        </div>
+        <div class="grid">
+            <div class="first">
+                <p>Thumbnail</p>
+            </div>
+            <p class="second white">This is a wider card with supporting text below as a natural lead in to additional content. This content
+                is a littel bit longer.</p>
+            <div class="third white">
+                <div class="btn">
+                    <button>View</button>
+                    <button>Edit</button>
+                </div>
+                <p>2 min ago</p>
+            </div>
+        </div>
+        <div class="grid">
+            <div class="first">
+                <p>Thumbnail</p>
+            </div>
+            <p class="second white">This is a wider card with supporting text below as a natural lead in to additional content. This content
+                is a littel bit longer.</p>
+            <div class="third white">
+                <div class="btn">
+                    <button>View</button>
+                    <button>Edit</button>
+                </div>
+                <p>2 min ago</p>
+            </div>
+        </div>
+        <div class="grid">
+            <div class="first">
+                <p>Thumbnail</p>
+            </div>
+            <p class="second white">This is a wider card with supporting text below as a natural lead in to additional content. This content
+                is a littel bit longer.</p>
+            <div class="third white">
+                <div class="btn">
+                    <button>View</button>
+                    <button>Edit</button>
+                </div>
+                <p>2 min ago</p>
+            </div>
+        </div>
+        <div class="grid">
+            <div class="first">
+                <p>Thumbnail</p>
+            </div>
+            <p class="second white">This is a wider card with supporting text below as a natural lead in to additional content. This content
+                is a littel bit longer.</p>
+            <div class="third white">
+                <div class="btn">
+                    <button>View</button>
+                    <button>Edit</button>
+                </div>
+                <p>2 min ago</p>
+            </div>
+        </div>
+        <div class="grid">
+            <div class="first">
+                <p>Thumbnail</p>
+            </div>
+            <p class="second white">This is a wider card with supporting text below as a natural lead in to additional content. This content
+                is a littel bit longer.</p>
+            <div class="third white">
+                <div class="btn">
+                    <button>View</button>
+                    <button>Edit</button>
+                </div>
+                <p>2 min ago</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
